# Hippocampus-8

./: .gitignore  README.md  demo.py  pyproject.toml
data/benchmarks/synthetic/: manifest.json
data/synthetic/: attach_000.jsonl  attach_001.jsonl  attach_002.jsonl  attach_003.jsonl  attach_004.jsonl  attach_005.jsonl  attach_006.jsonl  attach_007.jsonl  manifest.json  traversal_000.jsonl  traversal_001.jsonl  traversal_002.jsonl  traversal_003.jsonl  traversal_004.jsonl  traversal_005.jsonl  traversal_006.jsonl  traversal_007.jsonl
data/synthetic_ranked/: manifest.json
scripts/: benchmark_adversarial_memory.py  benchmark_indexed_traversal.py  benchmark_scorer.py  benchmark_vector_search_comparison.py  colab_keepalive_sidecar.py  colab_train_to_drive.py  convert_teacher_episodes.py  drive_sync_loop.py  generate_domain_teacher_episodes.py  generate_domain_validation.py  generate_synthetic_benchmark.py  generate_synthetic_ranking_training_data.py  generate_synthetic_training_data.py  generate_teacher_graph_episodes.py  label_teacher_episodes_qwen.py  local_qwen_drive_run.sh  run_qwen_label_shards.py  train_scorer.py
tests/: test_domain_validation.py  test_torch_models.py  test_vector_graph.py
vector_graph/: __init__.py  frames.py  index.py  insertion.py  scorer.py  store.py  torch_models.py  traversal.py  vectors.py
