[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hippo-qwen-2"
version = "0.1.0"
description = "Deterministic vector-frame graph traversal prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
torch = [
  "torch>=2.3",
]

[tool.setuptools.packages.find]
include = ["vector_graph*"]
